Created UI main menu

--- a/src/app/intro-screen/intro-screen.component.html
+++ b/src/app/intro-screen/intro-screen.component.html
@@ -1,4 +1,4 @@
 <div class="container">
   <img class="star" src="assets/intro-screen/star.png" alt="Star">
-  <button [routerLink]="['/main']" >Entrar</button>
+  <button mat-raised-button color="primary" [routerLink]="['/main']" >Entrar</button>
 </div>
