--- a/src/app/main-screen/main-screen.component.html
+++ b/src/app/main-screen/main-screen.component.html
@@ -1,1 +1,24 @@
-<p>main-screen works!</p>
+<mat-toolbar color="primary">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>My App</span>
+  <span class="spacer"></span>
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <mat-icon>share</mat-icon>
+  </button>
+</mat-toolbar>
+
+<div class="container">
+
+  <mat-grid-list style="margin-top: 40px" [cols]="gridColumns" rowHeight="275px">
+    <mat-grid-tile *ngFor="let menucard of menucards">
+      <app-menu-card [menuCard]="menucard"></app-menu-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+
+
+</div>
