--- a/src/app/main-screen/components/menu-card/menu-card.component.scss
+++ b/src/app/main-screen/components/menu-card/menu-card.component.scss
@@ -1,3 +1,5 @@
+@import '../../../app.component';
+
 .card-container {
   border-radius: 15px;
   display: grid;
@@ -5,7 +7,7 @@
   height: 250px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   cursor: pointer;
-  background-color: #e3dac9;
+  background-color: $card_bg;
 }
 
 .image {
